@@ -36,6 +36,7 @@
 
 #include <stdio.h>
 #include <Rinternals.h>
+#include <R_ext/Utils.h>
 #include <Rdefines.h>
 #include <R.h>
 #include <math.h>
@@ -227,6 +228,7 @@ SEXP bitwise_distance_haploid(SEXP genlight, SEXP missing, SEXP requested_thread
   // Loop through every genotype 
   for(i = 0; i < num_gens; i++)
   {
+    R_CheckUserInterrupt();
     // Set R_chr1_1 to be genlight@gen[[i]]@snp[[1]], aka a raw list
     // representing the entire first set of chromosomes in this genotype
     R_chr1_1 = VECTOR_ELT(getAttrib(VECTOR_ELT(R_gen,i),R_chr_symbol),0);
@@ -549,6 +551,7 @@ SEXP bitwise_distance_diploid(SEXP genlight, SEXP missing, SEXP differences_only
   // Loop through every genotype 
   for(i = 0; i < num_gens; i++)
   {
+    R_CheckUserInterrupt();
     // Set R_chr1_1 to be genlight@gen[[i]]@snp[[1]], 
     // aka a raw list representing the entire first set of chromosomes in this genotype
     R_chr1_1 = VECTOR_ELT(getAttrib(VECTOR_ELT(R_gen,i),R_chr_symbol),0); 
@@ -916,6 +919,7 @@ SEXP association_index_haploid(SEXP genlight, SEXP missing, SEXP requested_threa
   #endif
   for(i = 0; i < num_chunks; i++)
   {
+    R_CheckUserInterrupt();
     // Loop through all samples
     for(j = 0; j < num_gens; j++)
     {
@@ -1073,6 +1077,7 @@ SEXP association_index_haploid(SEXP genlight, SEXP missing, SEXP requested_threa
   #endif
   for(i = 0; i < num_loci; i++)
   {
+    R_CheckUserInterrupt();
     for(j = i+1; j < num_loci; j++)  
     {
       if(i != j)
@@ -1295,6 +1300,7 @@ SEXP association_index_diploid(SEXP genlight, SEXP missing, SEXP differences_onl
   #endif
   for(i = 0; i < num_chunks; i++)
   {
+    R_CheckUserInterrupt();
     // Loop through all samples
     for(j = 0; j < num_gens; j++)
     {
@@ -1472,6 +1478,7 @@ SEXP association_index_diploid(SEXP genlight, SEXP missing, SEXP differences_onl
   #endif
   for(i = 0; i < num_loci; i++)
   {
+    R_CheckUserInterrupt();
     for(j = i+1; j < num_loci; j++)  
     {
       if(i != j)
@@ -1567,6 +1574,7 @@ SEXP get_pgen_matrix_genind(SEXP genind, SEXP freqs, SEXP pops, SEXP npop)
   // Loop through all samples
   for (i = 0; i < num_gens; i++)
   {
+    R_CheckUserInterrupt();
     // Get the index for the allele frequencies
     pop = INTEGER(pops)[i] - 1;
     // h depends on ploidy. 
